# egm-emulator

./: .docker-entrypoint.sh  .gitignore  BUILD_INSTRUCTIONS.md  BUILD_SUMMARY.md  BUILD_SYSTEM_COMPLETE.md  CMakeLists.txt  CONVERSION_SUMMARY.md  CPP11_MIGRATION.md  EGMEmulator.mak  GETTING_STARTED.md  GUI_API_SPEC.md  IMPLEMENTATION_STATUS.md  Makefile  PHASE2_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PLAN.md  POLL_IMPLEMENTATION_TODO.md  README.md  SESSION_SUMMARY.md  USAGE.md  ZEUS_INTEGRATION.md  ZEUS_QUICK_START.md  apihelp.txt  build-with-docker.sh  build.sh  docker-shell.sh  egm-config.json  egm-firmware-version  fix_machine_ports.sh  gcloud_login.bat  get-firmware-version.sh  get-version.sh  increment-build.sh  push-changes.sh  update-egm-simulator.sh  wsl_build.bat  wsl_config.ini.template
.claude/: settings.local.json
Scripts/: diagnose-chrome.sh  egmemulator.sh  killchrome.sh  launchchrome-nocurl.sh  launchchrome.sh  sentinel.sh
egm-emulator-cpp/: .gitignore  CMakeLists.txt  GETTING_STARTED.md  PHASE5_COMPLETE.md  PLAN.md  PROGRESS_UPDATE.md  SAS_ONLY_CHANGES.md
egm-emulator-cpp/include/megamic/: ZeusPlatform.h
egm-emulator-cpp/src/event/: EventService.cpp
egm-emulator-cpp/src/io/: MachineCommPort.cpp  ZeusPlatform.cpp  ZeusSerialPort.cpp
egm-emulator-cpp/src/sas/: CRC16.cpp  SASCommPort.cpp  SASCommands.cpp  SASConstants.cpp  SASDaemon.cpp
egm-emulator-cpp/src/simulator/: Machine.cpp  main.cpp
include/: ICardPlatform.h  version.h
include/config/: EGMConfig.h  MeterPersistence.h  RapidJsonHelper.h
include/event/: EventService.h
include/http/: HTTPServer.h
include/io/: CommChannel.h  MachineCommPort.h  SASSerialPort.h  ZeusPlatform.h  ZeusSerialPort.h
include/megamic/: ICardPlatform.h  version.h
include/megamic/event/: EventService.h
include/megamic/io/: CommChannel.h  MachineCommPort.h  ZeusPlatform.h  ZeusSerialPort.h
include/megamic/sas/: CRC16.h  SASCommPort.h  SASConstants.h  SASDaemon.h
include/rapidjson/: allocators.h  document.h  encodings.h  rapidjson.h  reader.h  stringbuffer.h  writer.h
include/sas/: BCD.h  CRC16.h  SASCommPort.h  SASCommands.h  SASConstants.h  SASDaemon.h
include/simulator/: Game.h  Machine.h  MachineEvents.h
include/utils/: Logger.h
media/: index.html
media/css/: style.css
media/js/: app.js
src/config/: EGMConfig.cpp  MeterPersistence.cpp  RapidJsonHelper.cpp
src/event/: EventService.cpp
src/http/: HTTPServer.cpp
src/io/: CommChannel.cpp  MachineCommPort.cpp  SASSerialPort.cpp  SimulatedPlatform.cpp  ZeusPlatform.cpp  ZeusSerialPort.cpp  ZeusSerialPort.cpp.bak
src/sas/: BCD.cpp  CRC16.cpp  SASCommPort.cpp  SASCommands.cpp  SASConstants.cpp  SASDaemon.cpp
src/simulator/: Game.cpp  Machine.cpp  main.cpp
(+51 files in other folders)
